<resources>
    <string name="app_name">S World Rays</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="about">About</string>
    <string name="login_success">login success</string>
    <string name="login">LOGIN</string>
    <string name="Username">Email</string>
    <string name="Password">Password</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="go">GO</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="next">NEXT</string>
    <string name="register">REGISTER</string>

    <string name="hint_username">Enter a new username</string>
    <string name="hint_email_reset">Enter your email</string>
    <string name="enter_group_name">Enter group name</string>
    <string name="facebook_app_id">372221013310662</string>
    <string name="fb_login_protocol_scheme">fb372221013310662</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_registration">RegistrationActivity</string>


    <string name="order_id_mock" translatable="false"># 1234–5678</string>
    <string name="price_mock" translatable="false">$25</string>
    <string name="requests_count_mock" translatable="false">5</string>
    <string name="requests_count_badge" translatable="false">REQUESTS</string>
    <string name="weight_mock" translatable="false">50 oz</string>
    <string name="weight_badge" translatable="false">WEIGHT</string>
    <string name="pledge_mock" translatable="false">$150</string>
    <string name="pledge_badge" translatable="false">PLEDGE</string>
    <string name="sender_badge" translatable="false">SENDER</string>
    <string name="client_name_mock" translatable="false">Edward Norton</string>
    <string name="rating_mock" translatable="false">(26)</string>
    <string name="from_badge" translatable="false">FROM</string>
    <string name="to_badge" translatable="false">TO</string>
    <string name="delivery_date_badge" translatable="false">DELIVERY DATE</string>
    <string name="delivery_time_mock" translatable="false">6:30 pm</string>
    <string name="delivery_date_mock" translatable="false">May 16, 2016</string>
    <string name="deadline_badge" translatable="false">REQUEST DEADLINE</string>
    <string name="deadline_time_mock" translatable="false">24 minutes</string>
    <string name="request_btn_text" translatable="false">REQUEST</string>
    <string name="btn_annotation_mock" translatable="false">5 people have sent a request</string>
    <string name="content_from1_mock">W 90th St</string>
    <string name="content_from2_mock">New York, NY 10025</string>
    <string name="content_to1_mock">46th Ave</string>
    <string name="content_to2_mock">Woodside, NY 11101</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="webdev">RAYS provide quality driven approach towards Website development &amp; end to end customized solutions. We provide best services and work on different aspects of designing process for the better enhancement of your site. \n\n
        <!--We don’t create traditional websites. We develop lead generating machines so that your business moves to next level. We believe in excelling your business with our effective promotional tactics, well-planned approach &amp; smartly designed websites. Our dedicated team guides you at each step of the module for a better understandability and to provide you work with excellence. Our team always update with the latest market trends. We offer you the most multifunctional Portals Development. We keep in our mind the quality, so that the Portal delivers to the client to be of a superior quality. We provide reliable and quality service. We offer affordable services for our clients to optimize their business all over the world. We guarantee for a best services.\n\n-->
        <!--RAYS delivers best in class web portals to its global clients in various business verticals. Our web portal development services include travel portal development, real estate portal development, B2B (Business to Business) portals, B2C (Business to Consumer) portals, ecommerce portal development and Portal Maintenance.\n\n -->
        The advantage of hiring us is that we help you to provide value based portal development services which suits your business in a competitive market. What are you waiting for, Give us a call today!</string>
    <string name="sofdev">S World RAYS offers the full scope of services to deliver reliable software solutions matching your specific needs. We offer industry-specific software development services. We have been bringing digital transformation to mid-sized and large enterprises in Banking and Finance, Insurance, Telecommunications, Healthcare and Retail. Our key domains include enterprise software, e-commerce, e-learning, Billing, CRM, School ERP, Library, etc. Guarantee of professionalism throughout our engagement on your project\n\n
        We provide full-cycle software development services for web applications. We have a team of talented software developers who are in love with coding. With their level of dedication and expertise, we are able to extend our professional hand to businesses in Chhattisgarh and all over India.</string>
    <string name="appdev">We promises to deliver cutting-edge mobile app development services in every industry. We have a great team of Mobile app development, Our Developers are agile practitioners for years and have years of working experience in App Development. our developers have grown tremendously to deliver the full range of mobile services. Therefore, they are more productive than other development companies.</string>
    <string name="digmar">Ready to transform your traditional, startup and offline business into the digital platform.\n\n
    We are a young and energetic team of enthusiastic professionals who believe in innovative strategies and out-of-the-box solution for our clients. We aim to inspire, educate and help our customers thrive in an era where it has become vitally important to build strong customer relationships through digital marketing.</string>
    <string name="training">We have been building careers and developing corporate skill sets with our world-class training courses.\n\n
    Our leading edge approach of training and professional education includes workshops, professional education, executive coaching, hand-holding and customized training material created to suit the needs of the organization. As result our client see a measurable increase in employee performance, customer satisfaction and revenues.</string>

    <string-array name="country_arrays">
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>

    <string name="success">{"success":"success"}</string>
    <string name="aboutus"><![CDATA[S World-RAYS is a leading company in the field of professional training, Website designing, Software development, App development, Interior & Exterior designing, product designing for information technology providing a full range of high quality, cost effective IT solutions to business knowledge. We primarily deal with Information Technology Services, Staffing Solutions, and Corporate Training and also work as a consultancy firm.]]></string>
</resources>
